# desktop-entry-editor

./: .env  .gitignore  AUTHORS  COPYING  ChangeLog  Makefile.am  Makefile.in  README  README.markdown  configure.ac  run_local.py
data/: Makefile.am  Makefile.in  apps.desktop-entry-editor.gschema.xml  desktop-entry-editor.desktop.in  icon_preview_dialog.ui  main_window.ui  menu_toolbar.ui
data/icons/: Makefile.am
data/icons/hicolor/16x16/apps/: Makefile.am
data/icons/hicolor/22x22/apps/: Makefile.am
data/icons/hicolor/24x24/apps/: Makefile.am
data/icons/hicolor/32x32/apps/: Makefile.am
data/icons/hicolor/48x48/apps/: Makefile.am
data/icons/hicolor/scalable/apps/: Makefile.am
data/ui/: Makefile.am  main_window.ui  menu_toolbar.ui
dee/: application.py  entry.py
m4/: ax_python_module.m4
src/: Makefile.am  desktop-entry-editor.in  desktop-entry-editor.py
src/dee/: Makefile.am  application.py  entry.py  exceptiondialog.py
